# libvcell

./: .gitignore  .gitmodules  .java-version  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  build.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: docker.yml  main.yml  on-release-main.yml
docker/: Dockerfile_manylinux_2_28_aarch64  Dockerfile_manylinux_2_28_x86_64  Dockerfile_manylinux_2_34_aarch64  Dockerfile_manylinux_2_34_x86_64
docs/: index.md  modules.md
libvcell/: __init__.py  libvcell.py  model_utils.py  solver_utils.py
libvcell/_internal/: native_calls.py  native_utils.py
modules/: index.html
scripts/: build_native.sh  local_build_native.sh
search/: search_index.json
tests/: conftest.py  test_foo.py  test_libvcell.py
tests/fixtures/: data_fixtures.py
vcell-native/: README.md  pom.xml
vcell-native/src/main/java/org/vcell/libvcell/: Entrypoints.java  MainRecorder.java  ModelUtils.java  SolverUtils.java
vcell-native/src/main/java/org/vcell/libvcell/solvers/: LocalFVSolverStandalone.java  LocalFiniteVolumeFileWriter.java  LocalMovingBoundarySolverStandalone.java
vcell-native/src/main/resources/: custom.security  log4j2.xml
vcell-native/src/test/java/org/vcell/libvcell/: EntrypointsTest.java  MiscTests.java  ModelEntrypointsTest.java  SolverEntrypointsTest.java  TestUtils.java
vcell-native/src/test/resources/: FieldDataDemo.vcml  TinySpacialProject_Application0.xml  TinySpatialProject_Application0.vcml  TinySpatialProject_Application0.xml  bad_vcml.vcml  test2_lsm_DEMO.tgz  test2_lsm_DEMO_resampled.tgz
vcell-nativelib/: pom.xml
vcell-nativelib/src/main/java/org/vcell/: Main.java
